--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Tamara Buffa",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -19,5 +20,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.0"
   }
 }
